[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycontest"
version = "2.0.0"
description = "A complete test case generator for competitive programming"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Matin Habibi", email = "aktualled@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/matinhimself/pycontest"
Repository = "https://github.com/matinhimself/pycontest"
Issues = "https://github.com/matinhimself/pycontest/issues"

[tool.hatch.build.targets.wheel]
packages = ["pycontest"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]